Fine tuning of positioning and alignment - removes ng-leave transition to prevent 'services-no-sub-categories' from briefly showing when markup is present. - removes ng-enter transition for categories and subcategories

--- a/src/styles/services-view.less
+++ b/src/styles/services-view.less
@@ -65,14 +65,6 @@ services-view,
       }
     }
 
-    &.ng-leave {
-      opacity: 1;
-      transition: 200ms ease-in opacity;
-      &.ng-leave-active {
-        opacity: 0;
-      }
-    }
-
     .services-item-icon {
       &:after {
         border: 2px solid transparent;
@@ -156,11 +148,18 @@ services-view,
     }
   }
 
+  .services-no-sub-categories {
+    background: @color-pf-white; // so background extends when full height when default to show all
+  }
+
   @media(min-width: @screen-xs-min) {
     .services-no-sub-categories {
       display: flex;
       flex: 1 1 auto;
-      padding: 15px (@grid-gutter-width / 2) 12px;
+      margin: 0 (@grid-gutter-width / 2) 12px;
+      .landing & {
+        margin-top: 15px;
+      }
       .services-items {
         left: 0;
         margin: 0 0 8px;
@@ -174,7 +173,10 @@ services-view,
       display: flex;
       flex: 1 1 auto;
       flex-wrap: wrap;
-      margin: 15px (@grid-gutter-width / 2) 12px;
+      margin: 0 (@grid-gutter-width / 2) 12px;
+      .landing & {
+        margin-top: 15px;
+      }
       padding: 0;
       position: relative;
       .services-items {
@@ -338,9 +340,9 @@ services-view,
       }
     }
 
-    @media(min-width: 480px) {
-      .services-inner-container {
-        position: relative;
+    .services-inner-container {
+      position: relative;
+      @media(min-width: 480px) {
         .landing & {
           background: fade(@color-pf-blue-700, 90%);
           position: static;
@@ -359,7 +361,7 @@ services-view,
       margin-bottom: 0;
 
       @media(min-width: @screen-xs-min) {
-        margin-bottom: (@grid-gutter-width / 4);
+        margin-bottom: (@grid-gutter-width / 2);
         margin-left: (@grid-gutter-width / 2);
         margin-right: (@grid-gutter-width / 2);
       }
@@ -419,6 +421,7 @@ services-view,
       // position so services-sub-categories and services-no-sub-categories are aligned, so they overlay during transition
       &.ng-enter, &.ng-enter-prepare {
         bottom: 0;
+        display: block !important;
         left: 0;
         position: absolute;
         right: 0;
@@ -435,30 +438,6 @@ services-view,
       .services-items-filter {
         animation: catalogItemFade 150ms ease-in reverse;
         opacity: 0;
-      }
-    }
-
-    .services-no-sub-categories,
-    .services-sub-categories {
-
-      &.ng-enter, &.ng-enter-prepare {
-        transition: 200ms ease-out opacity;
-        opacity: 0;
-        &.ng-enter-active {
-          opacity: 1;
-        }
-      }
-
-      &.ng-enter-prepare {
-        display: none;
-      }
-
-      &.ng-leave {
-        opacity: 1;
-        transition: 200ms ease-in opacity;
-        &.ng-leave-active {
-          opacity: 0;
-        }
       }
     }
 
